[gd_scene load_steps=21 format=3 uid="uid://b3ihofu15tb7d"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_5m4uk"]
[ext_resource type="PackedScene" uid="uid://bwb2brmvqr300" path="res://Utility/gun.tscn" id="3_6gaby"]
[ext_resource type="Shader" path="res://vfx/white.gdshader" id="3_h76fk"]
[ext_resource type="Texture2D" uid="uid://donmcfpt3dyst" path="res://assets/Objects/PLAYERSHIP/01.png" id="3_lfui5"]
[ext_resource type="PackedScene" uid="uid://dpq8l77snu0yu" path="res://Utility/player_bullet.tscn" id="4_5mx2c"]
[ext_resource type="PackedScene" uid="uid://4ld00o7gyjxj" path="res://vfx/trail.tscn" id="5_qs2tt"]
[ext_resource type="PackedScene" uid="uid://72nqo5aa60l5" path="res://Utility/standard_light.tscn" id="6_5y0gn"]
[ext_resource type="PackedScene" uid="uid://cl1yt4kd5awk8" path="res://vfx/ShakeCamera.tscn" id="6_6wddw"]
[ext_resource type="PackedScene" uid="uid://bf66rpi2eibve" path="res://vfx/Muzzle.tscn" id="7_3nmef"]
[ext_resource type="Texture2D" uid="uid://dicvcfc7q84yw" path="res://assets/Objects/PLAYERSHIP/031.png" id="9_ttlat"]
[ext_resource type="PackedScene" uid="uid://cfxavqtalag7x" path="res://Utility/standard_audio.tscn" id="11_twtcb"]
[ext_resource type="AudioStream" uid="uid://bq5rm8kv08d62" path="res://assets/audio/hitting sound/hittinngeffect.mp3" id="12_xllb2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pbvjq"]
resource_local_to_scene = true

[sub_resource type="Animation" id="Animation_7qdiu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lfui5")]
}

[sub_resource type="Animation" id="Animation_vuq1l"]
resource_name = "fly"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_ttlat")]
}

[sub_resource type="Animation" id="Animation_ko3tx"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lfui5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wlta"]
_data = {
"RESET": SubResource("Animation_7qdiu"),
"fly": SubResource("Animation_vuq1l"),
"idle": SubResource("Animation_ko3tx")
}

[sub_resource type="Animation" id="Animation_3nkgp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_sgjvi"]
resource_name = "white_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_h76fk"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulfqq"]
_data = {
"RESET": SubResource("Animation_3nkgp"),
"white_flash": SubResource("Animation_sgjvi")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 4
script = ExtResource("1_5m4uk")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(4, 4)
polygon = PackedVector2Array(-4, -31, 11, -25, 10, -16, 21, -14, 19, -12, 13, -11, 13, -8, 18, -7, 23, -6, 23, -10, 28, -6, 36, -5, 41, -1, 34, 3, 28, 3, 23, 9, 24, 4, 19, 4, 14, 8, 11, 10, 21, 10, 20, 13, 16, 13, 10, 14, 10, 19, 12, 21, 12, 23, -4, 29, -5, 24, 4, 18, 0, 15, -9, 7, -16, 16, -23, 18, -24, 12, -20, 6, -18, 2, -14, -1, -16, -4, -18, -4, -18, -9, -22, -10, -24, -12, -24, -20, -17, -21, -10, -12, -8, -11, 2, -19, -5, -25)

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hurtbox"]
scale = Vector2(4, 4)
polygon = PackedVector2Array(-4, -31, 11, -25, 10, -16, 21, -14, 19, -12, 13, -11, 13, -8, 18, -7, 23, -6, 23, -10, 28, -6, 36, -5, 41, -1, 34, 3, 28, 3, 23, 9, 24, 4, 19, 4, 14, 8, 11, 10, 21, 10, 20, 13, 16, 13, 10, 14, 10, 19, 12, 21, 12, 23, -4, 29, -5, 24, 4, 18, 0, 15, -9, 7, -16, 16, -23, 18, -24, 12, -20, 6, -18, 2, -14, -1, -16, -4, -18, -4, -18, -9, -22, -10, -24, -12, -24, -20, -17, -21, -10, -12, -8, -11, 2, -19, -5, -25)

[node name="Trail" parent="." instance=ExtResource("5_qs2tt")]
position = Vector2(-55, 0)
default_color = Color(0, 0.427451, 0.364706, 1)

[node name="Icon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pbvjq")
rotation = 1.57079
scale = Vector2(4, 4)
texture = ExtResource("3_lfui5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wlta")
}

[node name="Gun" parent="." instance=ExtResource("3_6gaby")]
position = Vector2(116, -2)
BulletScene = ExtResource("4_5mx2c")

[node name="camera_pos" type="Marker2D" parent="Gun"]
position = Vector2(32, 0)

[node name="Camera2D" parent="Gun" instance=ExtResource("6_6wddw")]
position = Vector2(32, 0)
zoom = Vector2(0.2, 0.2)
process_callback = 0

[node name="PointLight2D" parent="Gun" instance=ExtResource("7_3nmef")]
position = Vector2(-28, 0)
rotation = 6.28318
energy = 0.1

[node name="PName" type="Node2D" parent="."]
position = Vector2(58, -256)

[node name="pname" type="Label" parent="PName"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.5
offset_right = 157.5
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "GUEST"

[node name="Lighting" type="Node2D" parent="."]

[node name="StandardLight" parent="Lighting" instance=ExtResource("6_5y0gn")]
position = Vector2(116, -2)
energy = 0.3

[node name="TailLight" parent="Lighting" instance=ExtResource("6_5y0gn")]
position = Vector2(-86, 0)
color = Color(0.129412, 0.521569, 0.54902, 1)
energy = 5.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ulfqq")
}

[node name="HurtSound" parent="." instance=ExtResource("11_twtcb")]
stream = ExtResource("12_xllb2")
volume_db = 12.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="shot" from="Gun" to="." method="_on_gun_shot"]
